--- a/user-webservice/build.gradle
+++ b/user-webservice/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
 	project.ext {
         bootVersion = '1.2.3.RELEASE'
+		cloudVersion = '1.0.0.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -33,8 +34,8 @@ repositories {
 dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web:${project.bootVersion}")    
     compile("org.springframework.boot:spring-boot-starter-actuator:${project.bootVersion}")
-	compile("org.springframework.cloud:spring-cloud-config-client:1.0.0.RELEASE")
-	
+	compile("org.springframework.cloud:spring-cloud-config-client:${project.cloudVersion}")
+	compile("org.springframework.cloud:spring-cloud-starter-eureka:${project.cloudVersion}")
 
     testCompile group: 'junit', name: 'junit', version: '4.+'
     testCompile 'org.springframework:spring-test:4.0.6.RELEASE'
