--- a/web-portal/build.gradle
+++ b/web-portal/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web:${project.bootVersion}")    
     compile("org.springframework.boot:spring-boot-starter-actuator:${project.bootVersion}")
 	compile("org.springframework.cloud:spring-cloud-config-client:${project.cloudVersion}")
-	
+	compile("org.springframework.cloud:spring-cloud-starter-eureka:${project.cloudVersion}")
 
     testCompile group: 'junit', name: 'junit', version: '4.+'
     testCompile 'org.springframework:spring-test:4.0.6.RELEASE'
