--- a/auth-server/build.gradle
+++ b/auth-server/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
 	project.ext {
-        bootVersion = '1.1.4.RELEASE'
+        bootVersion = '1.2.3.RELEASE'
+		cloudVersion = '1.0.0.RELEASE'
+		seurityVersion = '2.0.7.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -30,12 +32,14 @@ repositories {
 	jcenter()
 }
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web:1.1.4.RELEASE")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa:1.1.4.RELEASE")
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    
-    compile("org.apache.tomcat.embed:tomcat-embed-jasper")
-
+    compile("org.springframework.boot:spring-boot-starter-web:${project.bootVersion}")    
+    compile("org.springframework.boot:spring-boot-starter-actuator:${project.bootVersion}")
+	compile("org.springframework.boot:spring-boot-starter-security:${project.bootVersion}")
+	compile("org.springframework.cloud:spring-cloud-config-client:${project.cloudVersion}")
+	compile("org.springframework.cloud:spring-cloud-starter-eureka:${project.cloudVersion}")	
+	compile("org.springframework.security.oauth:spring-security-oauth2:${project.seurityVersion}")
+	compile("org.springframework.cloud:spring-cloud-starter-eureka:${project.cloudVersion}")
+	
     testCompile group: 'junit', name: 'junit', version: '4.+'
     testCompile 'org.springframework:spring-test:4.0.6.RELEASE'
 }
