auth server changes to support all grant types and added extensive documentation in README on how to use the different grants

--- a/auth-server/build.gradle
+++ b/auth-server/build.gradle
@@ -57,6 +57,14 @@ distDocker {
     exposePort 8080
 }
 
+bootRun {
+    jvmArgs = ['-Xdebug', '-Xrunjdwp:server=y,transport=dt_socket,address=4100,suspend=n','-Dspring.profiles.active=dev']
+}
+
+run {
+    jvmArgs = ['-Xdebug', '-Xrunjdwp:server=y,transport=dt_socket,address=4100,suspend=n','-Dspring.profiles.active=dev']
+}
+
 task createWrapper(type: Wrapper) {
     gradleVersion = '2.0'
 }
