Got angular application to work with SSO to the user webservice

--- a/config-server/application.yml
+++ b/config-server/application.yml
@@ -4,6 +4,10 @@ spring:
       server:
         git:
           uri: https://github.com/anilallewar/sample-config
+# While in development mode, you can configure the config server to pick up configuration files from
+# the file system
+          
+#           uri: file://Users/anilallewar/Documents/Anil Allewar/Trainings/Code Samples/Enterprise Java/Micro Services/sample-config
 
 server:
   port: 8888          
