--- a/user-webservice/bootstrap.yml
+++ b/user-webservice/bootstrap.yml
@@ -1,6 +1,11 @@
 spring:
   application:
+
+# Name of the service that is using with Zuul routes to forward specific requests to this service  
     name: user-webservice
-    cloud:
-      config:
-       uri: http://localhost:8888
+  cloud:
+    config:
+
+# Define the URL from where this service would pick up it's external configuration. Note that it is
+# pointing to the config-server aplication      
+      uri: http://localhost:8888
