--- a/comments-webservice/build.gradle
+++ b/comments-webservice/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'docker'
 
 
 jar {
-    baseName = 'sample-task-webservice'
+    baseName = 'sample-comments-webservice'
     version =  '0.0.1'
 }
 
@@ -36,7 +36,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator:${project.bootVersion}")
 	compile("org.springframework.cloud:spring-cloud-config-client:${project.cloudVersion}")
 	compile("org.springframework.cloud:spring-cloud-starter-eureka:${project.cloudVersion}")
-	compile("org.springframework.cloud:spring-cloud-starter-hystrix:${project.cloudVersion}")
+    compile("org.springframework.cloud:spring-cloud-starter-hystrix:${project.cloudVersion}")
     
     compile("org.springframework.cloud:spring-cloud-starter-security:${project.cloudVersion}")
 	compile("org.springframework.boot:spring-boot-starter-security:${project.bootVersion}")
@@ -57,11 +57,11 @@ distDocker {
 }
 
 bootRun {
-    jvmArgs = ['-Xdebug', '-Xrunjdwp:server=y,transport=dt_socket,address=4300,suspend=n','-Dspring.profiles.active=dev']
+    jvmArgs = ['-Xdebug', '-Xrunjdwp:server=y,transport=dt_socket,address=4400,suspend=n','-Dspring.profiles.active=dev']
 }
 
 run {
-    jvmArgs = ['-Xdebug', '-Xrunjdwp:server=y,transport=dt_socket,address=4300,suspend=n','-Dspring.profiles.active=dev']
+    jvmArgs = ['-Xdebug', '-Xrunjdwp:server=y,transport=dt_socket,address=4400,suspend=n','-Dspring.profiles.active=dev']
 }
 
 task createWrapper(type: Wrapper) {
