1. Got the docker compose to work; now we can build docker images for all projects and start them.\n 2. However the application still has issues running on docker

--- a/comments-webservice/src/main/resources/bootstrap.yml
+++ b/comments-webservice/src/main/resources/bootstrap.yml
@@ -1,11 +1,11 @@
 spring:
   application:
-
+  
 # Name of the service that is using with Zuul routes to forward specific requests to this service  
-    name: user-webservice
+    name: comments-webservice
   cloud:
     config:
-
+      
 # Define the URL from where this service would pick up it's external configuration. Note that it is
-# pointing to the config-server aplication      
-      uri: http://localhost:8888
+# pointing to the config-server aplication         
+      uri: ${vcap.services.${PREFIX:}configserver.credentials.uri:http://localhost:8888}
