--- a/user-webservice/build.gradle
+++ b/user-webservice/build.gradle
@@ -15,13 +15,10 @@ buildscript {
     }
 }
 
-apply plugin: 'application'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
 apply plugin: 'java'
 apply plugin: 'docker'
-
-
 
 jar {
     baseName = 'sample-user-webservice'
@@ -46,14 +43,21 @@ dependencies {
     testCompile 'org.springframework:spring-test:4.0.6.RELEASE'
 }
 
-group = 'rohitghatol'
+group = 'anilallewar'
+mainClassName = 'com.rohitghatol.microservices.user.Application'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
-
 distDocker {
     exposePort 8080
+    setEnvironment 'JAVA_OPTS', '-Dspring.profiles.active=docker'
+}
+
+docker {
+    useApi true
+    hostUrl 'http://192.168.59.103:2375'
+    baseImage = 'java:7'
 }
 
 bootRun {
