--- a/auth-server/build.gradle
+++ b/auth-server/build.gradle
@@ -15,7 +15,6 @@ buildscript {
     }
 }
 
-apply plugin: 'application'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
 apply plugin: 'java'
@@ -48,14 +47,22 @@ dependencies {
     testCompile 'org.springframework:spring-test:4.0.6.RELEASE'
 }
 
-group = 'rohitghatol'
+group = 'anilallewar'
+mainClassName = 'com.rohitghatol.microservice.auth.Application'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 
 distDocker {
-    exposePort 8080
+    exposePort 8899
+    setEnvironment 'JAVA_OPTS', '-Dspring.profiles.active=docker'
+}
+
+docker {
+    useApi true
+    hostUrl 'http://192.168.59.103:2375'
+    baseImage = 'java:7'
 }
 
 bootRun {
