--- a/task-webservice/src/main/resources/bootstrap.yml
+++ b/task-webservice/src/main/resources/bootstrap.yml
@@ -2,10 +2,10 @@ spring:
   application:
   
 # Name of the service that is using with Zuul routes to forward specific requests to this service  
-    name: comments-webservice
+    name: task-webservice
   cloud:
     config:
       
 # Define the URL from where this service would pick up it's external configuration. Note that it is
 # pointing to the config-server aplication         
-      uri: http://localhost:8888
+      uri: ${vcap.services.${PREFIX:}configserver.credentials.uri:http://localhost:8888}
