--- a/web-portal/build.gradle
+++ b/web-portal/build.gradle
@@ -14,7 +14,6 @@ buildscript {
     }
 }
 
-apply plugin: 'application'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
 apply plugin: 'java'
@@ -41,7 +40,8 @@ dependencies {
     testCompile 'org.springframework:spring-test:4.0.6.RELEASE'
 }
 
-group = 'rohitghatol'
+group = 'anilallewar'
+mainClassName = 'com.rohitghatol.microservices.portal.Application'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -52,6 +52,13 @@ bootRun {
 
 distDocker {
     exposePort 8080
+    setEnvironment 'JAVA_OPTS', '-Dspring.profiles.active=docker'
+}
+
+docker {
+    useApi true
+    hostUrl 'http://192.168.59.103:2375'
+    baseImage = 'java:7'
 }
 
 task createWrapper(type: Wrapper) {
