--- a/user-webservice/src/main/resources/bootstrap.yml
+++ b/user-webservice/src/main/resources/bootstrap.yml
@@ -8,4 +8,12 @@ spring:
 
 # Define the URL from where this service would pick up it's external configuration. Note that it is
 # pointing to the config-server aplication      
-      uri: ${vcap.services.${PREFIX:}configserver.credentials.uri:http://localhost:8888}
+      uri: http://localhost:8888
+
+---
+
+spring:
+  profiles: docker
+  cloud:
+     config:
+        uri: http://192.168.59.103:8888
