--- a/webservice-registry/src/main/resources/bootstrap.yml
+++ b/webservice-registry/src/main/resources/bootstrap.yml
@@ -3,6 +3,12 @@ spring:
     name: webservice-registry
   cloud:
     config:
-      uri: ${vcap.services.${PREFIX:}configserver.credentials.uri:http://localhost:8888}
-       
-       
+      uri: http://localhost:8888
+      
+---
+
+spring:
+  profiles: docker
+  cloud:
+     config:
+        uri: http://192.168.59.103:8888
