--- a/comments-webservice/gradle/wrapper/gradle-wrapper.properties
+++ b/comments-webservice/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Jul 13 13:05:49 PDT 2015
+#Wed Apr 26 20:51:06 IST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.5-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-bin.zip
